monitoria/mac323/4-2-33/grades/Patrick-Abrahão-Menani_190863_assignsubmission_file_WordDAG.java.txt

WWWWWWWWWWWWWWWWWWWWWWWWWW
CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
26 | Resposta Errada
0 | Erro de Execução
CORREÇÃO MANUAL
Você não se aproveita da ordenação topológica para contar a quantidade de caminhos, itera por todos eles. Isso é muito ruim, a quantidade de caminhos entre um par de vértices pode ser muito grade e gastar uma iteração para somar um na resposta é extremamente demorado. Mais especificamente, seu algoritmo toma tempo esponencial e deveria tomar tempo linear.


make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
WordDAG.java:39: error: exception FileNotFoundException is never thrown in body of corresponding try statement
			} catch (FileNotFoundException e) {
			  ^
WordDAG.java:43: error: exception IOException is never thrown in body of corresponding try statement
			} catch (IOException e) {
			  ^
WordDAG.java:67: error: exception FileNotFoundException is never thrown in body of corresponding try statement
			} catch (FileNotFoundException e) {
			  ^
WordDAG.java:71: error: exception IOException is never thrown in body of corresponding try statement
			} catch (IOException e) {
			  ^
4 errors
RMMMRMMRMMMMRMMMMMMMRMMMMM

real	0m2.493s
user	0m6.672s
sys	0m0.536s
====== 000_case =========
wrong answer 1st lines differ - expected: 'cobre cobra', found: ''
Resposta Errada
====== 001_case =========
wrong answer 1st lines differ - expected: '2', found: ''
Resposta Errada
====== 002_case =========
wrong answer 1st lines differ - expected: '0', found: ''
Resposta Errada
====== 003_case =========
wrong answer 1st lines differ - expected: '1', found: ''
Resposta Errada
====== 004_case =========
wrong answer 1st lines differ - expected: 'a A', found: ''
Resposta Errada
====== 005_case =========
wrong answer 1st lines differ - expected: '1', found: ''
Resposta Errada
====== 006_case =========
wrong answer 1st lines differ - expected: '0', found: ''
Resposta Errada
====== 007_case =========
wrong answer 1st lines differ - expected: 'a A', found: ''
Resposta Errada
====== 008_case =========
wrong answer 1st lines differ - expected: '1474', found: ''
Resposta Errada
====== 009_case =========
wrong answer 1st lines differ - expected: '235229', found: ''
Resposta Errada
====== 010_case =========
wrong answer 1st lines differ - expected: '84', found: ''
Resposta Errada
====== 011_case =========
wrong answer 1st lines differ - expected: '240', found: ''
Resposta Errada
====== 012_case =========
wrong answer 1st lines differ - expected: 'a A', found: ''
Resposta Errada
====== 013_case =========
wrong answer 1st lines differ - expected: '1', found: ''
Resposta Errada
====== 014_case =========
wrong answer 1st lines differ - expected: '6', found: ''
Resposta Errada
====== 015_case =========
wrong answer 1st lines differ - expected: '1964', found: ''
Resposta Errada
====== 016_case =========
wrong answer 1st lines differ - expected: '398394', found: ''
Resposta Errada
====== 017_case =========
wrong answer 1st lines differ - expected: '1398768', found: ''
Resposta Errada
====== 018_case =========
wrong answer 1st lines differ - expected: '923340550', found: ''
Resposta Errada
====== 019_case =========
wrong answer 1st lines differ - expected: '114495854014092500', found: ''
Resposta Errada
====== 020_case =========
wrong answer 1st lines differ - expected: 'b a', found: ''
Resposta Errada
====== 021_case =========
wrong answer 1st lines differ - expected: '803469022129495137770981046170581301261101496891396417650688', found: ''
Resposta Errada
====== 022_case =========
wrong answer 1st lines differ - expected: '340282366920938463463374607431768211456', found: ''
Resposta Errada
====== 023_case =========
wrong answer 1st lines differ - expected: '452312848583266388373324160190...7600158453279131187530910662656', found: ''
Resposta Errada
====== 024_case =========
wrong answer 1st lines differ - expected: '706233516069713018417604833508...6082073593257084545458595954688', found: ''
Resposta Errada
====== 025_case =========
wrong answer 1st lines differ - expected: '216164294552797813644468298334...4074980640712723296570197409792', found: ''
Resposta Errada
